# software-design-2023-05-samplecode

./: .gitignore  README.md
assembly_script/: README.md  package.json
assembly_script/assembly/: index.ts
emscripten-opencv-demo/: CMakeLists.txt  README.md  index.html
emscripten-opencv-demo/src/: main.cpp
emscripten-sdl-demo/: CMakeLists.txt  README.md
emscripten-sdl-demo/src/: main.cpp
rust/: README.md
zig/: README.md  build.sh  build.zig  main.wasm
zig/src/: main.zig
